--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack --mode=development",
+    "build": "rm -rf dist && tsc",
     "start": "node ./dist/main.js"
   },
   "keywords": [],
@@ -15,11 +15,8 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.171",
     "nodemon": "^2.0.10",
-    "ts-loader": "^9.2.3",
-    "typescript": "^4.3.5",
-    "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-node-externals": "^3.0.0"
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "express": "^4.17.1",
