--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && tsc",
-    "start": "node ./dist/main.js"
+    "start:dev": "nodemon --watch './**/*.ts' --exec 'ts-node' app.ts",
+    "start": "node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.171",
     "nodemon": "^2.0.10",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.5"
   },
